# SentinelBoot

./: .config  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  boot.scr  bootloader  br.config  build.rs  gen_helper.py  generate_rsa_keys.py  genimage.cfg  hash.py  kernel.ld  lk.config  log_pc.py  pre_process.py  qemu_monitor.py  riscv64gcv-unknown-none-elf.json  rust-toolchain.toml  rustfmt.toml  sign_kernel.sh
.cargo/: config.toml
.github/workflows/: docker.yml  draft_release.yml  main.yml  pull.yml  qemu_test.sh  release.yml  remove-stale-artifacts.yml
archive/01_05_23/: notes.md
archive/07_05_23/: notes.md
bsp/: Cargo.toml
bsp/src/: lib.rs
bsp/src/qemu/: console.rs  device_driver.rs  memory.rs  mod.rs
bsp/src/unmatched/: console.rs  device_driver.rs  memory.rs  mod.rs
bsp/src/visionfive/: console.rs  cpu.rs  device_driver.rs  genimage.cfg  memory.rs  mod.rs
console/: Cargo.toml
console/src/: lib.rs  null_console.rs
driver/: Cargo.toml
driver/src/: lib.rs
driver/src/dw8250_a_uart/: mod.rs
driver/src/ns16550_a_uart/: mod.rs
driver/src/unmatched_uart/: mod.rs
driver/src/virt16550_a_uart/: mod.rs
global_allocator/: Cargo.toml
global_allocator/src/: lib.rs
mmio/: Cargo.toml
mmio/src/: lib.rs
riscv64/: Cargo.toml
riscv64/src/: lib.rs
riscv64/src/cpu/: boot-u-boot.s  boot.rs  boot.s  bootloader-qemu.ld  bootloader-raw.ld  bootloader-u-boot.ld  mem.s  trap.s
src/: assemble.py  assert_hex.rs  bsp.rs  console.rs  cpu.rs  driver.rs  helper.rs  main.rs  panic_wait.rs  pre-process.py  pre_process.py  print.rs  run_time_checks.rs  synchronisation.rs  vector_hash.rs  vector_hash.s  vector_hash_intermediate.s  vector_hash_processed.s  verification.rs
src/_arch/riscv64/: cpu.rs
src/_arch/riscv64/cpu/: boot.rs  boot.s
src/bsp/: device_driver.rs  visionfive.rs
src/bsp/device_driver/: bcm.rs  common.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/visionfive/: bootloader.ld  console.rs  driver.rs  memory.rs
src/console/: null_console.rs
src/cpu/: boot.rs
synchronisation/: Cargo.toml
synchronisation/src/: lib.rs
tftp/: .config  .gdbinit  .gitattributes  .linux-config  0001-Disable-rvv-check.patch  Dockerfile  Dockerfile.buildroot  board_serial_test.py  boot.scr  boot.scr.qemu  build.sh  copy.sh  generate_ed25519_keys.py  hash.py  initrd_dump  jh7110-visionfive-v2.dtb  kill_hanging_qemu.py  mangle.py  mkimage.sh  output  power_cycle_board.sh  print.py  private_key.pem  public_key.pem  public_key.raw  qemu-modified.dtb  qemu-system-riscv64  qemu.dtb  qemu_direct.sh  qemu_test.sh  qemu_test_local_vm.sh  qemu_tftp.sh  qemu_tftp_local.sh  run_qemu.sh  run_qemu_local.sh  setup_bridge.sh  sign_kernel.sh  tftp_network_bringup.sh  vf2_tftp.py
tftp/docker/: dhcpd  isc-dhcp-server  network-interfaces  tftpd
