[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootloader"
path = "src/main.rs"

[profile.release]
lto = 'fat'

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
bsp = { path = "bsp", version = "*" }
riscv64 = { path = "riscv64", version = "*"  }
synchronisation = { path = "synchronisation", version = "*"  }
console = { path = "console", version = "*"  }
driver = { path = "driver", version = "*"  }

##--------------------------------------------------------------------------------------------------
## Workspace
##--------------------------------------------------------------------------------------------------

[workspace]
members = ["bsp", "riscv64", "synchronisation", "console", "driver"]

##--------------------------------------------------------------------------------------------------
## Features
##--------------------------------------------------------------------------------------------------

[features]
default = []
visionfive = ["bsp/visionfive", "driver/visionfive"]
