[package]
name = "OpenThesis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootloader"
path = "src/main.rs"

[profile.release]
lto = 'fat'

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
bsp = { path = "bsp", version = "*" }
riscv64 = { path = "riscv64", version = "*"  }
synchronisation = { path = "synchronisation", version = "*"  }
console = { path = "console", version = "*"  }
driver = { path = "driver", version = "*"  }
global_allocator = { path = "global_allocator", version = "*" }

##--------------------------------------------------------------------------------------------------
## Workspace
##--------------------------------------------------------------------------------------------------

[workspace]
members = ["bsp", "riscv64", "synchronisation", "console", "driver", "global_allocator"]

##--------------------------------------------------------------------------------------------------
## Features
##--------------------------------------------------------------------------------------------------

[features]
default = []
qemu = ["bsp/qemu", "driver/qemu"]
qemu_tftp = ["bsp/qemu", "driver/qemu"]
visionfive = ["bsp/visionfive", "driver/visionfive"]
unmatched = ["bsp/unmatched", "driver/unmatched"]
debug = ["console/debug"]
