[package]
name = "OpenThesis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootloader"
path = "src/main.rs"

[profile.release]
lto = 'fat'

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
bsp = { path = "bsp", version = "*" }
riscv64 = { path = "riscv64", version = "*"  }
synchronisation = { path = "synchronisation", version = "*"  }
console = { path = "console", version = "*"  }
driver = { path = "driver", version = "*"}
global_allocator = { path = "global_allocator", version = "*" }
sha2 = { version = "0.10.8", default-features = false }
ed25519-compact = { version = "2.0.4", default-features = false }
pelite = { version = "0.10.0", default-features = false }

##--------------------------------------------------------------------------------------------------
## Workspace
##--------------------------------------------------------------------------------------------------

[workspace]
members = ["bsp", "riscv64", "synchronisation", "console", "driver", "global_allocator"]

##--------------------------------------------------------------------------------------------------
## Features
##--------------------------------------------------------------------------------------------------

[features]
default = []
qemu = ["bsp/qemu", "driver/qemu"]
qemu_vector = ["bsp/qemu", "driver/qemu"]
visionfive = ["bsp/visionfive", "driver/visionfive"]
unmatched = ["bsp/unmatched", "driver/unmatched"]
debug = ["console/debug"]
