[package]
name = "bsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
driver = { path = "../driver", version = "*"  }
mmio = { path = "../mmio", version = "*"  }
console = { path = "../console", version = "*"  }

[features]
default = []
qemu = ["driver/qemu"]
visionfive = ["driver/visionfive"]
