[package]
name = "console"
version = "0.1.0"
edition = "2021"

[features]
default = []
qemu = []
qemu_tftp = []
visionfive = []
unmatched = []
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
synchronisation = { path = "../synchronisation", version = "*"  }
