[package]
name = "global_allocator"
version = "0.1.0"
edition = "2021"

[features]
default = []
qemu = []
qemu_tftp = []
visionfive = []
unmatched = []
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console = { path = "../console", version = "*"  }
riscv64 = { path = "../riscv64", version = "*"  }
synchronisation = { path = "../synchronisation", version = "*"  }
bsp = { path = "../bsp", version = "*" }
